tests/NormalTests/paczka1/fuzzy1/74452876.err
Error in line 6: S523 A523 9,2
Error in line 18: CFWRXukrRBU A523 38,2
Error in line 12: S523 A206 56,0
Error in line 19: CFWRXukrRBU A206 96,0
Error in line 24: 6R70bp A523 23,60
Error in line 21: S523 S523 29,5
Error in line 28: dGPpSk A855 39,0
